--- a/styles.css
+++ b/styles.css
@@ -49,12 +49,14 @@
     display: flex;
     margin: 64px;
     gap: 64px;
+    height: fit-content;
 }
 
 .hero-heading{
     width: 100%;
     display: flex;
     flex-direction: column;
+    justify-content: center;
     gap: 16px;
 }
 
@@ -85,7 +87,7 @@
 
 .hero-image{
     width: 100%;
-    height: auto;
+    height: 300px`;
     display: flex;
     justify-content: center;
     align-items: flex-start;
@@ -97,5 +99,39 @@
     border-radius: 8px;
     max-width: 100%;
     width: 100%;
-    height: 50%;
+    height: 300px;
+}
+
+.features {
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 40px 40px;
+    font-size: 36px;
+    color: #1f2937;
+    font-weight: 900;
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+}
+
+.feature-list {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    gap: 64px;
+}
+
+.feature{
+    width: 100%;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+}
+
+.feature-icon{
+    border: 2px solid #1f2937;
+    padding: 8px;
+    border-radius: 16px;
+    width: 100%;
+    height: auto;
 }
