--- a/styles.css
+++ b/styles.css
@@ -135,3 +135,37 @@
     width: 100%;
     height: auto;
 }
+
+.testimonials {
+    background-color: #e5e7eb;
+    margin: 0 auto;
+    padding: 40px 40px;
+    font-size: 36px;
+    color: #1f2937;
+    font-weight: 900;
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+}
+
+.testimonials-content {
+    max-width: 1200px;
+    margin: 0 auto;
+}
+
+.testimonials-list {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    gap: 64px;
+}
+
+q {
+    font-style: italic;
+    font-weight: 300;
+    color: #1f2937;
+}
+
+.testimonial p{
+    text-align: end;
+}
