--- a/styles.css
+++ b/styles.css
@@ -169,3 +169,44 @@ q {
 .testimonial p{
     text-align: end;
 }
+
+.cta{
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 40px 40px;
+}
+
+.cta-content{
+    background-color: #3B82F6;
+    display: flex;
+    justify-content: space-evenly;
+    padding: 40px 20px;
+    gap: 16px;
+    border-radius: 8px;
+}
+
+.cta-title{
+    font-size: 36px;
+    font-weight: 900;
+    color: #F9FAF8;
+}
+
+.cta-subtitle{
+    font-size: 18px;
+    color: #F9FAF8;
+}
+
+.cta-button{
+    background-color: #3B82F6;
+    color: white;
+    font-size: 16px;
+    border: 3px solid white;
+    border-radius: 8px;
+    padding: 10px 20px;
+    width: fit-content;
+}
+
+.cta-button:hover {
+    background-color: white;
+    color: #3B82F6;
+}
